Updated: v1.0.1 | Routing jump correction & Style changes

--- a/src/routes/Task/Card/index.less
+++ b/src/routes/Task/Card/index.less
@@ -2,7 +2,7 @@
   border: 1px solid #888;
   display: inline-block;
   box-sizing: border-box;
-  padding: 10px 4%;
+  padding: 20px 4%;
   border-radius: 5px;
   cursor: pointer;
   position: relative;
@@ -26,6 +26,5 @@
     background-color: #fff;
     height: 100%;
     border-left: 3px solid #888;
-
   }
 }
